fix: 認証は削除
